--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -70,11 +70,37 @@
 \begin{itemize}
 \item<2-> Lattice with \(N\) sites
 \item<3-> Discrete integer spins \( \sigma_i = \pm 1 \) on each lattice site
-\item<4-> \( \mathscr{H} = -J \sum\limits_{i, j} \sigma_i \sigma_j - H \sum\limits_i \sigma_i \)
-\item<5-> \( H \): external field, \( J \): interaction
+\item<4-> \[ \mathscr{H}(\sigma) = -J \sum\limits_{i, j} \sigma_i \sigma_j - \mu H \sum\limits_i \sigma_i \]
+	\note[item]<5> {More favorable for the spins to be aligned!}
+\item<5-> \( J \): interaction, \( H \): external field
 	\note[item]<5> {\( J_{ij} \) in general case, \( J>0 \): ferromagnetic, \( J<0 \): antiferromagnetic}
+\item<6-> \[ p(\sigma, T) = \frac{e^{-\beta \mathscr{H}(\sigma)}}{\mathscr{Z}(T)}, \ \ \ \ \beta=\frac{1}{k_B T}\]
+	\note[item]<6> {Configuration probability given by boltzmann distribution, Z partition function, given as \[ \mathscr{Z}(T) = \sum_\sigma e^{-\beta \mathscr{H}(\sigma)},\ \ \beta = \frac{1}{k_B T} \]}
+	\note[item]<6> {So we are looking at a canonical system with constant temperature T.}
+\item<7-> \[ \left< M \right>|_T = \sum_\sigma M(\sigma)p(\sigma,T) \]
+	\note[item]<7> {Measurement value of a function, e.g. magnetization, is given by the sum over all states of the measurement value at the configuration times the configuration probability.}
 \end{itemize}
 \end{frame}
+
+\begin{frame}{Ising model - Monte Carlo}
+\begin{itemize}
+\item<2-> We can't compute all configurations.
+	\note[item]<2> {Why not? \( \rightarrow 2^N = 2^{L^d} \) e.g. \( L = systemSize = 15 \) in 2 dimensions: \(2^{15^2} = 2^{225} = 5 \cdot 10^{67}\)}
+	\note[item]<2> {We can't compute the exact expectation value of an observable. But that's what we're interested in.}
+\item<3-> We don't want to sample equally distributed over energy.
+	\note[item]<3> {Because the distribution of the average energy gets sharper with increasing size \(\left(\alpha \ \sqrt{L^d}\right)\).}
+\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
 
 \begin{frame}{A sample slide}
 
