--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -44,9 +44,9 @@
 \begin{columns}[c]
 	\column{.5\textwidth}
 	\begin{itemize}
-		\item<1-> Phase transitions.
+		\item<1-> Phase transitions
 			\note[item]<1> {Phase transitions are important}
-		\item<2-> One of the simplest statistical models that show a phase transition.
+		\item<2-> One of the simplest statistical models that show a phase transition
 			\note[item]<2> {The Ising model is one of the simplest statistical models that shows a phase transition.}
 		\item<3-> Magnetic systems, opinion models, binary mixtures
 			\note[item]<3> {Ising model can be used to simulate magnetic systems (ferromagnetic and antiferromagnetic), opinion models and binary mixtures.}
@@ -68,29 +68,46 @@
 
 \begin{frame}{Ising model - Definition}
 \begin{itemize}
-\item<2-> Lattice with \(N\) sites
-\item<3-> Discrete integer spins \( \sigma_i = \pm 1 \) on each lattice site
-\item<4-> \[ \mathscr{H}(\sigma) = -J \sum\limits_{i, j} \sigma_i \sigma_j - \mu H \sum\limits_i \sigma_i \]
-	\note[item]<4> {Sum over nearest neighbours.}
-	\note[item]<5> {More favorable for the spins to be aligned!}
-\item<5-> \( J \): interaction, \( H \): external field
-	\note[item]<5> {\( J_{ij} \) in general case, \( J>0 \): ferromagnetic, \( J<0 \): antiferromagnetic}
-\item<6-> \[ p(\sigma, T) = \frac{e^{-\beta \mathscr{H}(\sigma)}}{\mathscr{Z}(T)}, \ \ \ \ \beta=\frac{1}{k_B T}\]
-	\note[item]<6> {Configuration probability given by boltzmann distribution, Z partition function, given as \[ \mathscr{Z}(T) = \sum_\sigma e^{-\beta \mathscr{H}(\sigma)},\ \ \beta = \frac{1}{k_B T} \]}
-	\note[item]<6> {So we are looking at a canonical system with constant temperature T.}
-\item<7-> \[ \left< M \right>_T = \sum_\sigma M(\sigma)p(\sigma,T) \]
-	\note[item]<7> {Measurement value of a function, e.g. magnetization, is given by the sum over all states of the measurement value at the configuration times the configuration probability.}
+	\note[item]<1> {Lattice with \(N\) sites.}
+\item<2-> Discrete integer spins \( \sigma_i = \pm 1 \) on each lattice site
 \end{itemize}
+\pause
+\[ \mathscr{H}(\sigma) = -J \sum\limits_{\left< i, j \right>} \sigma_i \sigma_j - H \sum\limits_i \sigma_i \]
+	\note[item]<4> {Sum over nearest neighbours.}
+	\note[item]<4> {\( J \): interaction, \( H \): external field}
+	\note[item]<4> {\( J_{ij} \) in general case, \( J>0 \): ferromagnetic, \( J<0 \): antiferromagnetic}
+\pause
+\begin{columns}[c]
+	\column{.5\textwidth}
+	\def\svgwidth{.5\textwidth}
+	\centering
+	\input{img/spins_parallel.pdf_tex}
+	\column{.5\textwidth}
+	\def\svgwidth{.5\textwidth}
+	\centering
+	\input{img/spins_antiparallel.pdf_tex}
+		\note[item]<5> {For positive J: More favorable for the spins to be aligned!}
+\end{columns}
+\end{frame}
+
+\begin{frame}{Ising model - Canonical ensemble}
+\pause
+\[ p(\sigma, T) = \frac{e^{-\beta \mathscr{H}(\sigma)}}{\mathscr{Z}(T)}, \ \ \ \ \beta=\frac{1}{k_B T}\]
+	\note[item]<2> {Configuration probability given by boltzmann distribution, Z partition function, given as \[ \mathscr{Z}(T) = \sum_\sigma e^{-\beta \mathscr{H}(\sigma)},\ \ \beta = \frac{1}{k_B T} \]}
+	\note[item]<2> {So we are looking at a canonical system with constant temperature T.}
+\pause
+\[ \left< M \right>_T = \sum_\sigma M(\sigma)p(\sigma,T) \]
+	\note[item]<3> {Measurement value of a function, e.g. magnetization, is given by the sum over all states of the measurement value at the configuration times the configuration probability.}
 \end{frame}
 
 \begin{frame}{Ising model - Monte Carlo I}
 \begin{itemize}
-\item<2-> We can't compute all configurations.
+\item<2-> We can't compute all configurations (\(2^N\))
 	\note[item]<2> {Why not? \( \rightarrow 2^N = 2^{L^d} \) e.g. \( L = systemSize = 15 \) in 2 dimensions: \(2^{15^2} = 2^{225} = 5 \cdot 10^{67}\)}
 	\note[item]<2> {We can't compute the exact expectation value of an observable. But that's what we're interested in.}
-\item<3-> We can't sample uniformely distributed over energy.
+\item<3-> We can't sample uniformely distributed over energy \def\svgwidth{12em} \input{img/energy_gaussian.pdf_tex}
 	\note[item]<3> {Because the distribution of the average energy gets sharper with increasing size \(\left(\alpha \ \sqrt{L^d}\right)\).}
-\item<4-> Solution: Importance sampling using Metropolis (M(RT)$^2$) algorithm.
+\item<4-> Solution: Importance sampling using Metropolis algorithm.
 \end{itemize}
 \end{frame}
 
@@ -102,29 +119,32 @@ A(X \rightarrow Y) &= \min \left( 1, \frac{p(Y)}{p(X)} \right) \\
 \end{align*}
 \note {If energy decreases, always accept. If energy increases, accept with probability \( e^{- \beta \Delta E} \).}
 \begin{enumerate}
-\item Choose on site.
+\item Choose one site (uniformly randomly)
 	\note[item] {New state given by spinflip at this site.}
-\item Calculate energy difference.
-\item Accept new configuration with transition probability above.
+\item Calculate energy difference
+\item Accept new configuration with transition probability above
 \end{enumerate}
 \note{Blazingly fast (Troells: 2 flips/ns?), easy to implement.}
 \end{frame}
 
 \begin{frame}{Single spin flip metropolis - Results}
 \pause
-Spontaneous magnetization \( M_s(T) = \left< \frac{1}{N} \sum\limits_{i=1}^N \sigma_i \right> \)
+Magnetization \( M(T) = \left< \frac{1}{N} \sum\limits_{i=1}^N \sigma_i \right> \)
 \begin{columns}[c]
 	\column{.5\textwidth}
 	\pause
+	\centering Expected
 	\includegraphics[width=\textwidth]{img/single_magnetization_theoretical.png}
 	\column{.5\textwidth}
 	\pause
+	\centering Obtained
 	\includegraphics[width=\textwidth]{img/single_magnetization_size15.png}
 \end{columns}
 \note[item]<1> {I implemented this single spin flip metropolis algorithm and would like to show you some results.}
 \note[item]<2> {Let's look at the spontaneous magnetization.}
-\note[item]<3> {In theory, we expect the spontaneous magnetization to look like this.}
-\note[item]<4> {Well, this is what we get. It looks perfect - right? Well, life is not so easy. This result is in fact not the truth. Let me show you what we expect for the spontaneous magnetization.}
+\note[item]<3> {In theory, we expect a spontaneous magnetization below \(T_C\). We expect a symmetry breaking (either positive or negative Magnetization in this case) and a discontinuity in the derivative of the magnetization at \(T_C\). We want something linear to \( (T-T_C)^\nu \).}
+\note[item]<4> {Well, this is what we get. It looks perfect - right? We see a spontaneous magnetization in the simulation. The discontinuity in its derivative is not there, but this is okay, since we are looking at a finite sized system.
+Well, life is not so easy. This result is in fact not the truth. Let me show you what we expect for the spontaneous magnetization.}
 \end{frame}
 
 \begin{frame}{Ising model - 2 spins}
