--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -183,6 +183,7 @@ Well, life is not so easy. This result is in fact not the truth. Let me show you
 	\pause
 	\includegraphics[width=\textwidth]{../results/measurements/autocorr_magnetization.png}
 \end{columns}
+\note[item]<3> {We see that the energy converges much faster than the magnetization. I read that people often focus on the energy, but here you really have to focues on the magnetization to be sure.}
 \note{Definition and plots from measurements, magnetization and energy.}
 \end{frame}
 
@@ -206,12 +207,43 @@ The correlation time of a variable is defined as:
 \note{Draw graphics with the bins and the levels.}
 \end{frame}
 
-\begin{frame}{What really happens in the system}
+\begin{frame}{What really happens in the System}
 \note{Draw domains on board and show single spin flip only is useful at borders of domains.}
+\end{frame}
+
+\begin{frame}{Cluster algorithms: Wolff algorithm}
+\[ P(\sigma_x, \sigma_y) = 1 - \min \left( 1,e^{2\beta \sigma_x \sigma_y} \right) \]
+\begin{enumerate}
+\item<2-> Choose one site (uniformly randomly)
+\item<3-> Flip its spin and add it to the cluster
+\item<4-> For all sites in the cluster:
+	\begin{enumerate}
+	\item Visit every unknown neighbour, flip its spin and add it to the cluster with probability given above
+	\end{enumerate}
+\end{enumerate}
 \end{frame}
 
 \begin{frame}{Why cluster algorithms are better}
 \includegraphics[width=\textwidth]{img/comp_magnetization.png}
+\end{frame}
+
+\begin{frame}{Energy}
+\end{frame}
+
+\begin{frame}{Cluster size}
+\end{frame}
+
+\begin{frame}{Magnetization}
+\end{frame}
+
+\begin{frame}{Magnetization squared}
+\note{Magnetization itself is a bad order parameter, since it can have two signs so it cancels. Magnetization squared is a good order parameter, because it consists of sums of spatial spin correlations. It shows the phase transition.}
+\end{frame}
+
+\begin{frame}{Computation time per spin flip}
+\end{frame}
+
+\begin{frame}{Swendsen-Wang}
 \end{frame}
 
 
@@ -221,29 +253,6 @@ The correlation time of a variable is defined as:
 
 \begin{frame}{Wolff or Swendsen-Wang?}
 Swendsen-Wang better for parallelization because it touches the whole lattice.
-\end{frame}
-
-\begin{frame}{A sample slide}
-
-A displayed formula:
-
-\[
-  \int_{-\infty}^\infty e^{-x^2} \, dx = \sqrt{\pi}
-\]
-
-An itemized list:
-
-\begin{itemize}
-  \item itemized item 1
-  \item itemized item 2
-  \item itemized item 3
-\end{itemize}
-
-\begin{theorem}
-  In a right triangle, the square of hypotenuse equals
-  the sum of squares of two other sides.
-\end{theorem}
-
 \end{frame}
 
 \end{document}
