slides, added timing measurement in this branch too

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -264,6 +264,7 @@ The correlation time of a variable is defined as:
 \end{frame}
 
 \begin{frame}{Computation time per spin flip}
+\includegraphics[width=\textwidth]{../results/measurements/nsPerSpinFlip.png}
 \end{frame}
 
 \begin{frame}{Swendsen-Wang}
