--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -1,4 +1,4 @@
-\documentclass[]{beamer}
+\documentclass[handout]{beamer}
 \usetheme{default}
 
 \usepackage{graphicx} % \includegraphics
@@ -14,7 +14,7 @@
 }
 
 % to print with notes
-%\setbeameroption{show notes}
+\setbeameroption{show notes}
 %\setbeameroption{show only notes}
 
 % no decoration to notes
